# seashell

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  TODO.txt  pyproject.toml
.github/workflows/: tests.yml
examples/: definitions.cshl  demo.cshl  hello.cshl  json_integration_test.cshl  stdlib_integration_test.cshl  string_formatting.cshl
src/seashell/: cli.py
src/seashell/diagnostics/: __init__.py  errors.py
src/seashell/lexer/: grammar.lark
src/seashell/parser/: ast_nodes.py  parser.py  transformer.py
src/seashell/runtime/: context.py  errors.py  interpreter.py  module.py  signals.py  types.py  values.py
src/seashell/stdlib/: collections.py  fs.py  io.py  os.py
src/seashell/stdlib/data/: __init__.py  json.py
src/seashell/utils/: __init__.py
tests/parser/: test_parser_basic.py  test_parser_function_call.py  test_parser_function_declaration.py  test_parser_if_statement.py
tests/runtime/: test_runtime_errors.py  test_runtime_function_call.py  test_runtime_types.py  test_runtime_user_function.py  test_runtime_values.py  test_runtime_variable.py
tests/stdlib/: test_json_integration.py  test_stdlib_integration.py
