[project]
name = "seashell"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "lark>=1.3.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[project.scripts]
seashell = "seashell.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.14"
strict = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
